--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
       <fieldset class="form__element form__element--wide">
         <label for="address">Адрес</label>
-        <input id="address" name="address" type="text" required readonly>
+        <input id="address" name="address" type="text" readonly>
       </fieldset>
 
       <fieldset class="form__element">
@@ -244,7 +244,11 @@
 
   <button style="left: 200px; top: 400px;" class="map__pin"><img src="img/avatars/user07.png" width="40" height="40" draggable="false"></button>
 </template>
-<script src ="js/map.js">
-</script>
+<script src ="js/util.js"></script>
+<script src ="js/form.js"></script>
+<script src ="js/data.js"> </script>
+<script src ="js/card.js"> </script>
+<script src ="js/pin.js"></script>
+<script src ="js/map.js"></script>
 </body>
 </html>
