--- a/index.html
+++ b/index.html
@@ -246,8 +246,10 @@
 </template>
 <script src ="js/util.js"></script>
 <script src ="js/backend.js"></script>
+<script src ="js/debounce.js"></script>
 <script src ="js/form.js"></script>
-<script src ="js/card.js"> </script>
+<script src ="js/card.js"></script>
+<script src ="js/filter.js"></script>
 <script src ="js/synchronize-fields.js"></script>
 <script src ="js/show-card.js"></script>
 <script src ="js/pin.js"></script>
