--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
 <script src ="js/util.js"></script>
 <script src ="js/backend.js"></script>
 <script src ="js/debounce.js"></script>
+<script src ="js/upload-image.js"></script>
 <script src ="js/form.js"></script>
 <script src ="js/card.js"></script>
 <script src ="js/filter.js"></script>
