--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <div class="notice">
     <h2 class="notice__title">Ваше объявление</h2>
 
-    <form class="notice__form notice__form--disabled" method="post" enctype="multipart/form-data" action="https://js.dump.academy/keksobooking" autocomplete="off">
+    <form class="notice__form notice__form--disabled" method="post" enctype="multipart/form-data" autocomplete="off">
       <fieldset class="notice__header">
         <legend>Ваша фотография (для карты)</legend>
         <div class="notice__photo">
@@ -107,7 +107,7 @@
 
       <fieldset class="form__element form__element--wide">
         <label for="address">Адрес</label>
-        <input id="address" name="address" type="text" readonly>
+        <input id="address" name="address" type="text" required>
       </fieldset>
 
       <fieldset class="form__element">
@@ -244,7 +244,6 @@
 
   <button style="left: 200px; top: 400px;" class="map__pin"><img src="img/avatars/user07.png" width="40" height="40" draggable="false"></button>
 </template>
-<script src ="js/util.js"></script>
 <script src ="js/backend.js"></script>
 <script src ="js/debounce.js"></script>
 <script src ="js/upload-image.js"></script>
